crates/peregrine-tui/src/app/agent_ui/status/snapshots/peregrine_tui__agent__status__tests__status_snapshot_shows_auto_review_permissions.snap
---
source: crates/peregrine-tui/src/agent/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────╮
│  >_ Peregrine (v0.1.0)                                                │
│                                                                       │
│ Rate limits and credits are managed by the active provider.           │
│                                                                       │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                             │
│  Permissions:      Workspace (Approve for me)                         │
│  Agents.md:        <none>                                             │
│                                                                       │
│  Token usage:      0 total  (0 input + 0 output)                      │
│  Context window:   100% left (0 used / 272K)                          │
│  Limits:           data not available yet                             │
╰───────────────────────────────────────────────────────────────────────╯
